--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4247,4 +4247,7 @@
     <string name="action_alarm">Alarm</string>
     <string name="action_null">Blank</string>
     <string name="action_app">Custom App/Shortcut</string>
+
+    <!-- stylus gestures support -->
+    <string name="stylus_app_not_installed">%s is not installed</string>
 </resources>
