--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -547,6 +547,7 @@
     <string name="clock_error_alert">No DeskClock app installed.</string>
 
     <!--  Target/Action Strings -->
+    <string name="shortcut_label">AOKP Actions</string>
     <string name="action_home">Home</string>
     <string name="action_back">Back</string>
     <string name="action_recents">Recents</string>
@@ -558,6 +559,9 @@
     <string name="action_notifications">Notifications</string>
     <string name="action_none">Empty</string>
 
+    <string name="widgets">Widgets</string>
+    <string name="toggle_navbar">NavBar - Toggle</string>
+    <string name="toggle_widgets">Widgets - Toggle</string>
     <string name="toggle_ring_vib">Ring/Vib - Toggle</string>
     <string name="toggle_ring_silent">Ring/Silent - Togle</string>
     <string name="toggle_ring_vib_silent">Ring/Vib/Silent - Toggle</string>
