Add support for HW Rotation Lock
Forward ported from jellybean

Change-Id: I75fb9fa33541eb6acedd62a67e74977b36768390

Conflicts:
	core/res/res/values/strings.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4281,4 +4281,9 @@
     <string name="permdesc_sendMockSms">Allows the app to send mock SMS messages.
         This allows an app send SMS to trusted applications. Malicious apps could send messages
         continuously, blocking the device notification system and disrupting the user.</string>
+
+    <!-- Hardware Rotation lock string -->
+    <string name="toast_rotation_unlocked">Display rotation unlocked</string>
+    <string name="toast_rotation_locked">Display rotation locked</string>
+
 </resources>
