FW: AOKP Ribbon
This creates a series of options for shortcuts in a few places

The AOKP Swipe ribbon
Lockscreen ribbon
Notifications ribbon
Quick Settings ribbon

Options for Long Press, Icons size, Custom Icons,
  Text on and off, Text color, and options for
  Swipe ribbon color and Opacity.

Change-Id: I6bfb541801bd428b5eee06ef1c3f7d23ef7eeede

Conflicts:
	core/java/android/provider/Settings.java
	core/java/com/android/internal/util/aokp/AwesomeConstants.java
	packages/SystemUI/res/layout/status_bar_expanded.xml
	packages/SystemUI/src/com/android/systemui/aokp/AwesomeAction.java
	packages/SystemUI/src/com/android/systemui/statusbar/WidgetView.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java
	policy/src/com/android/internal/policy/impl/keyguard/KeyguardSelectorView.java

FW: Ribbons Padding, Click options, autohide updates 1/2

Adjustable padding
vibrate on click optional
if no short action set use long action icon and
  dont set short click listener - long press only mode...
Autohide flakiness fixed
Don't unlock on torch

Change-Id: I45c9f29453220e80249300b66bb61d5a7afc784f

Conflicts:
	core/java/com/android/internal/util/aokp/AokpRibbonHelper.java
	core/java/com/android/internal/util/aokp/RibbonTarget.java
	packages/SystemUI/src/com/android/systemui/aokp/AokpSwipeRibbon.java

FW Ribbons Swipe ribbons seperated && logic adjust for navbar

If you have an enabled navbar weither by default or user seleted
the bottom ribbon has not been available. If the user manually
hides the navbar I will allwo them to use the bottom ribbon.
They can also long press the hidden navbar handle to get the
bottom ribbon.

This also makes the left right and bottom their own ribbons.

Change-Id: Icba9c4ec510149bef74382a3bf59fd79b3ef87c4

Conflicts:
	core/java/android/provider/Settings.java
	core/java/com/android/internal/util/aokp/AokpRibbonHelper.java
	packages/SystemUI/src/com/android/systemui/aokp/AokpSwipeRibbon.java

xFW: Ribbons Colorize action i

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -559,6 +559,12 @@
     <string name="calendar_error_alert">No Calendar app installed.</string>
     <string name="clock_error_alert">No DeskClock app installed.</string>
 
+    <!--  App window Strings -->
+    <string name="close">Close</string>
+    <string name="app_window">Applications</string>
+    <string name="toggles">Toggles</string>
+    <string name="ribbon">Ribbon</string>
+
     <!--  Target/Action Strings -->
     <string name="shortcut_label">AOKP Actions</string>
     <string name="action_home">Home</string>
