Add another AwesomeAction
Add Quick Ssettings action to AwesomeConstants, etc

Plus fix some derps from previous commits

Change-Id: I97d937624f8ddbdc1bb44ff6275d3427aa897887

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4234,6 +4234,7 @@
     <string name="action_lastapp">Last app</string>
     <string name="action_power">Power</string>
     <string name="action_notifications">Notifications</string>
+    <string name="action_quicksettings">Quick Settings</string>
     <string name="action_assist">Search (Google Now)</string>
     <string name="action_clockoptions">Clock options</string>
     <string name="action_voiceassist">Voice search</string>
