--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4250,4 +4250,11 @@
 
     <!-- stylus gestures support -->
     <string name="stylus_app_not_installed">%s is not installed</string>
+
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_sendMockSms">Send mock SMS messages</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_sendMockSms">Allows the app to send mock SMS messages.
+        This allows an app send SMS to trusted applications. Malicious apps could send messages
+        continuously, blocking the device notification system and disrupting the user.</string>
 </resources>
